--- a/draft.adoc
+++ b/draft.adoc
@@ -55,7 +55,7 @@ De forma adicional, se ha incluido también Node.js, tecnología muy popular en
 los últimos años que promete ser ligera y eficiente.
 
 .Indice Tiobe
-image::./tiobe.png[tiobe]
+image::./tiobe.png[tiobe, pdfwidth=30%]
 
 ==== 3.1.1 WebSockets
 
